Final Data Update

--- a/Final Data/Final_Data.ipynb
+++ b/Final Data/Final_Data.ipynb
@@ -1365,6 +1365,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7ccd0786",
+   "metadata": {},
+   "source": [
+    "Data Set Used: [Pittsburgh Police Arrest Data](https://data.wprdc.org/dataset/arrest-data)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "571bf1cc",
@@ -1448,6 +1456,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "65c4518f",
+   "metadata": {},
+   "source": [
+    "Data Set Used: [Allegheny County Air Quality](https://data.wprdc.org/dataset/allegheny-county-air-quality)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "22ea6742",
@@ -1525,6 +1541,47 @@
   },
   {
    "cell_type": "markdown",
+   "id": "61e95db3",
+   "metadata": {},
+   "source": [
+    "Here is our combined list of scores for the neighborhoods we reviewed:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cc9ede10",
+   "metadata": {},
+   "source": [
+    "1. Polish Hill: 41 points\n",
+    "1. Central Oakland: 45 points\n",
+    "1. Fairywood: 45 points\n",
+    "1. Mount Washington: 45 points\n",
+    "1. Perry North: 46 points\n",
+    "1. Friendship: 46 points\n",
+    "1. Upper Lawrenceville: 46 points\n",
+    "1. Bluff: 46 points\n",
+    "1. Garfield: 47 points\n",
+    "1. Morningside: 47 points"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "91c0d011",
+   "metadata": {},
+   "source": [
+    "According to our metrics, Polish Hill is the best neighborhood to live in for wellbeing."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bdf67618",
+   "metadata": {},
+   "source": [
+    "## Final Conclusion: Polish Hill"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "0f5272d9",
    "metadata": {},
    "source": [
@@ -1560,7 +1617,7 @@
    "id": "f3dcf169",
    "metadata": {},
    "source": [
-    "Looking at the arrest data really gives a good idea of how bad some of the areas in Pittsburgh are and how good some of them can be. "
+    "Looking at the arrest data really gives a good idea of how bad some of the areas in Pittsburgh are and how good some of them can be. The air quality is also very important to take into account with Pittsburgh's history of steel production."
    ]
   }
  ],
